[gd_scene load_steps=8 format=3 uid="uid://dfwox8jic22j5"]

[ext_resource type="Script" path="res://scripts/battle_system/actors/actor_pawn.gd" id="1_32nbc"]
[ext_resource type="Texture2D" uid="uid://bavjdhm86n6jc" path="res://sprites/selectionHalo.png" id="2_fskpn"]
[ext_resource type="Texture2D" uid="uid://dv8m7ojkm1jv6" path="res://sprites/enemies/musketeer/musketeer_idle.png" id="3_4ehb5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ppl3c"]
radius = 30.0
height = 152.0

[sub_resource type="Animation" id="Animation_08430"]
resource_name = "IdleSway"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PawnSprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.96), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PawnSprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ntud3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PawnSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PawnSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mi0xf"]
_data = {
"IdleSway": SubResource("Animation_08430"),
"RESET": SubResource("Animation_ntud3")
}

[node name="ActorPawn" type="Sprite2D"]
texture_filter = 1
script = ExtResource("1_32nbc")
attacker_offset = Vector2(-20, 0)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_ppl3c")

[node name="SelectGlow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
show_behind_parent = true
position = Vector2(0, -5)
scale = Vector2(1.62319, 2.4)
texture = ExtResource("2_fskpn")

[node name="BolsterGlow" type="Sprite2D" parent="."]
modulate = Color(0, 1, 0, 0)
show_behind_parent = true
position = Vector2(0, -5)
scale = Vector2(1.62319, 2.4)
texture = ExtResource("2_fskpn")

[node name="AidGlow" type="Sprite2D" parent="."]
modulate = Color(0, 0.639216, 1, 0)
show_behind_parent = true
position = Vector2(0, -5)
scale = Vector2(1.62319, 2.4)
texture = ExtResource("2_fskpn")

[node name="TurnGlow" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 0, 1)
show_behind_parent = true
position = Vector2(0, 43.5)
scale = Vector2(1.62319, 1.43)
texture = ExtResource("2_fskpn")

[node name="PawnSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_4ehb5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mi0xf")
}
speed_scale = 2.0

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
